@@ -25,20 +25,24 @@ How the contours are joined depends on the type of object and the options
 selected by the radio buttons.  
 <OL>
 <LI> For closed contour type objects, the
-contours can either be joined by a connecting line or concatenated end to end.
+  contours can either be joined by a closely-spaced pair of connecting lines or
+  concatenated end to end.  The connecting lines will be up to two pixels
+  apart, or
+  closer together if the spacing between contour points is less than 2 pixels
+  around the points chosen for joining.
 <UL>
 <LI>If <B>Concatenate</B> is selected, all of the points from one contour will be
 added after all of the points in the other contour, so that the contours will
 appear joined at their nearest endpoints. 
 <LI>If <B>Join near pts</B> is
-selected, a connecting line will be generated between the contours at their
+selected, a pair of connecting lines will be generated between the contours at their
 points of closest approach.
 <LI>If <B>Auto-choose</B> is selected, the program
 will automatically choose between these two approaches based upon whether a
 pair of contours have openings at their ends larger than the distance between
 their endpoints.
 <LI>If <B>Join set pts</B> is selected, two contours will be
-joined with a connecting line between the selected points in the contours.
+joined with a pair of connecting lines between the selected points in the contours.
 </UL>
 Thus, these options give you complete control over the process, but the
 default <B>Auto-choose</B> will probably do what you want.
