@@ -128,6 +128,8 @@ int imodContourEquivEllipse(Icont *cont, Ipoint *center, float *longAxis,
 int imodContourZValue(Icont *cont);
 int imodContourFitPlane(Icont *cont, Ipoint *scale, Ipoint *norm, float *dval,
                         double *alpha, double *beta);
+int imodContourInsideCont(Icont *inner, Icont *outer);
+
 
 /* calculates the center of mass values for cont and puts them in rpt. */
 int    imodContourCenterOfMass(Icont *cont, Ipoint *rpt);
@@ -138,6 +140,7 @@ double imodContourCenterMoment(Icont *cont, Ipoint *org, int a, int b);
  * returns index of point in cont that is nearest to pnt. 
  */
 int    imodContourNearest(Icont *cont, Ipoint *pnt);
+
 
 /****************************************************************************
  * All functions with ContZ in their name assume all z values are the same.
