@@ -109,6 +109,7 @@ EXPORTS
 	imodLabelRead
 	imodContourStrip
 	imodPointLineDistance
+	imodContourInsideCont
 	istoreInsert
 	imodPlaneSetPN
 	imodContourFlatten
